SAR working all the way through!

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -87,7 +87,7 @@
     "        \n",
     "        NOC_download.retrieve_median_sar(inputs)\n",
     "        \n",
-    "NOC_download.save_metadata(inputs)"
+    "metadata = NOC_download.save_metadata(inputs)"
    ]
   },
   {
@@ -140,31 +140,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['create_reference_shoreline'] = False\n",
-    "inputs['reference_threshold'] = 0\n",
+    "for site in sites:\n",
+    "    for date_pair in dates:\n",
+    "        \n",
+    "        site_name = site[:site.find('.')]\n",
+    "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "\n",
-    "settings['inputs'] = inputs\n",
+    "        inputs = {'dates': date_pair, 'sat_name': 'S1', 'site_name': site_name,\n",
+    "              'median_dir_path': median_dir_path, 'pixel_size': 10}\n",
+    "        \n",
+    "        inputs['create_reference_shoreline'] = False\n",
+    "        inputs['reference_threshold'] = 0\n",
+    "        inputs['polarisation'] = 'VH'\n",
     "\n",
-    "settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
-    "printProgress('')\n",
+    "        settings['inputs'] = inputs\n",
+    "        \n",
+    "        metadata = NOC_download.load_metadata(inputs)\n",
+    "        settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)\n",
     "\n",
-    "%matplotlib qt\n",
-    "shorelines = NOC_shoreline.extract_shorelines_sar(metadata, settings)                \n",
+    "        %matplotlib qt\n",
+    "        shoreline = NOC_shoreline.extract_shoreline_sar(metadata, settings)\n",
     "\n",
-    "gdf = NOC_tools.output_to_gdf(shorelines, metadata)\n",
+    "        gdf = NOC_tools.output_to_gdf(shoreline, metadata)\n",
     "\n",
-    "file_string = f'{site_name}_shorelines_{inputs[\"polarisation\"]}.geojson'\n",
+    "        file_string = f'{site_name}_shoreline_{inputs[\"polarisation\"]}' + \\\n",
+    "                      f'_S{inputs[\"dates\"][0]}_E{inputs[\"dates\"][1]}.geojson'\n",
     "\n",
-    "if  ~gdf.empty:\n",
-    "    gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
-    "    # save GEOJSON layer to file\n",
-    "    gdf.to_file(os.path.join(inputs['median_dir_path'],\n",
-    "                             file_string),\n",
-    "                             driver='GeoJSON', encoding='utf-8')\n",
-    "    printProgress(f'written: {file_string}')\n",
-    "else:\n",
-    "    printWarning('no shorelines to be seen ...')"
+    "        if  ~gdf.empty:\n",
+    "            gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
+    "            # save GEOJSON layer to file\n",
+    "            gdf.to_file(os.path.join(inputs['median_dir_path'],\n",
+    "                                     file_string),\n",
+    "                                     driver='GeoJSON', encoding='utf-8')\n",
+    "            printProgress(f'written: {file_string}')\n",
+    "        else:\n",
+    "            printWarning('no shorelines to be seen ...')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
