--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -38,14 +38,14 @@
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
     "settings ={\n",
-    "           'output_epsg': 32737,\n",
+    "           'output_epsg': 32620,\n",
     "           'max_dist_ref': 100,           # max distance (in meters) allowed from the reference shoreline\n",
     "           'min_length_shoreline': 500,   # min length (in meters) for shorelines\n",
     "          }\n",
     "\n",
     "# directory where the data will be accessed and stored\n",
     "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'kenya'\n",
+    "country = 'UK'\n",
     "base_dir_path = os.path.join(data_partition, country)  \n",
     "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
     "sites = os.listdir(sites_dir_path)\n",
@@ -110,11 +110,11 @@
     "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
     "\n",
     "        inputs = {'dates': date_pair, 'sat_name': 'S1', 'site_name': site_name,\n",
-    "              'median_dir_path': median_dir_path, 'pixel_size': 10}\n",
+    "                  'median_dir_path': median_dir_path, 'pixel_size': 10}\n",
     "\n",
     "        inputs['polarisation'] = 'VH'\n",
     "        inputs['sigma'] = 5\n",
-    "        inputs['create_reference_shoreline'] = True\n",
+    "        inputs['create_reference_shoreline'] = True  \n",
     "        inputs['reference_threshold'] = 0\n",
     "\n",
     "        settings['inputs'] = inputs\n",
@@ -125,6 +125,37 @@
     "\n",
     "        %matplotlib qt\n",
     "        shorelines = NOC_shoreline.extract_shorelines_sar(metadata, settings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## find reference threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for site in sites:\n",
+    "    \n",
+    "    site_name = site[:site.find('.')]\n",
+    "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
+    "\n",
+    "    inputs = {'dates': ['2019-01-01', '2020-12-31'], 'sat_name': 'S1', 'site_name': site_name,\n",
+    "          'median_dir_path': median_dir_path, 'pixel_size': 10}\n",
+    "\n",
+    "    inputs['create_reference_shoreline'] = False\n",
+    "    inputs['reference_threshold'] = 0\n",
+    "    inputs['polarisation'] = 'VH'\n",
+    "    \n",
+    "    settings['inputs'] = inputs    \n",
+    "\n",
+    "    %matplotlib qt\n",
+    "    shorelines = NOC_shoreline.find_reference_threshold(settings)        "
    ]
   },
   {
@@ -150,9 +181,9 @@
     "              'median_dir_path': median_dir_path, 'pixel_size': 10}\n",
     "        \n",
     "        inputs['create_reference_shoreline'] = False\n",
-    "        inputs['reference_threshold'] = 0\n",
+    "        inputs['reference_threshold'] = -25.0\n",
     "        inputs['polarisation'] = 'VH'\n",
-    "\n",
+    "        \n",
     "        settings['inputs'] = inputs\n",
     "        \n",
     "        metadata = NOC_download.load_metadata(inputs)\n",
@@ -173,16 +204,10 @@
     "                                     file_string),\n",
     "                                     driver='GeoJSON', encoding='utf-8')\n",
     "            printProgress(f'written: {file_string}')\n",
+    "            print()\n",
     "        else:\n",
     "            printWarning('no shorelines to be seen ...')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
