optical refactored - working

--- a/SAR_shoreline.ipynb
+++ b/SAR_shoreline.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## download Sentinel-1 data from GEE"
+    "## download SAR data from GEE"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "        \n",
     "        NOC_download.retrieve_median_sar(inputs)\n",
     "        \n",
-    "metadata = NOC_download.save_metadata(inputs)"
+    "metadata = NOC_download.save_metadata(settings)"
    ]
   },
   {
@@ -155,7 +155,7 @@
     "    settings['inputs'] = inputs    \n",
     "\n",
     "    %matplotlib qt\n",
-    "    shorelines = NOC_shoreline.find_reference_threshold(settings)        "
+    "    NOC_shoreline.find_reference_threshold(settings)        "
    ]
   },
   {
