--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32737,\n",
+    "settings ={'output_epsg': 32326,\n",
     "           \n",
     "           'cloud_thresh':0.9,\n",
     "           \n",
@@ -79,142 +79,108 @@
     "                      'S2': {'10m': [['B2', 'B3', 'B4', 'B8'], 10],\n",
     "                             '20m': [['B5', 'B6', 'B7', 'B8A', 'B11', 'B12'], 20],\n",
     "                             '60m': [['B12'], 60]}, }\n",
-    "          }"
+    "          }\n",
+    "# directory where the data will be accessed and stored\n",
+    "data_partition = 'c:\\\\data\\\\coastsat'\n",
+    "country = 'UK'\n",
+    "base_dir_path = os.path.join(data_partition, country)  \n",
+    "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
+    "sites = os.listdir(sites_dir_path)\n",
+    "\n",
+    "dates = [['2019-01-01', '2019-06-30'],\n",
+    "         ['2019-07-01', '2019-12-31'],\n",
+    "         ['2020-01-01', '2020-06-30'],\n",
+    "         ['2020-07-01', '2020-12-31']]\n",
+    "\n",
+    "sat_name = 'S2'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Retrieval of the images from GEE\n",
-    "\n",
-    "To retrieve from the GEE server the available satellite images cropped around the user-defined region of coastline for the particular time period of interest, the following variables are required:\n",
-    "\n",
-    "* Coordinate list: a list of the coordinates of the region of interest (longitude/latitude pairs in WGS84) – see section 'create coordinate list in User handbook to extract ROI from study site\n",
-    "* all_dates: dates over which the images will be retrieved (e.g., dates = ['2017-12-01', '2018-01-01'])\n",
-    "* all_sats: satellite missions to consider (e.g., sat_list = ['L7', 'L8', 'S2'] for Landsat 7, 8 and Sentinel-2 collections)\n",
-    "* sitename: name of the site (this is the name of the subfolder where the images and other accompanying files will be stored)\n",
-    "\n",
-    "Similar to coastsat, there are some extra parameters such as those to go through manual checking, whether to combine Landsat collections and cloud thresholds.\n",
-    "\n",
-    "Make sure the area of your ROI is smaller than 100 km2 (if larger split it into smaller ROIs) - GEE limits download size"
+    "## download optical data from GEE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "progress  >>>  processing Watamu\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# directory where the data will be accessed and stored\n",
-    "data_partition = 'c:\\\\data\\\\coastsat'\n",
-    "country = 'kenya'\n",
-    "base_dir_path = os.path.join(data_partition, country)  \n",
-    "sites_dir_path = os.path.join(base_dir_path, 'sites')\n",
-    "sites = os.listdir(sites_dir_path)\n",
-    "\n",
-    "sat_name = 'S2'\n",
-    "\n",
-    "dates = ['2020-01-01', '2020-06-30']\n",
-    "\n",
     "for site in sites:\n",
+    "    for date_pair in dates:\n",
     "\n",
-    "    kml_filepath = os.path.join(sites_dir_path, site)\n",
-    "    kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
-    "    roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
+    "        kml_filepath = os.path.join(sites_dir_path, site)\n",
+    "        kml_polygon = NOC_tools.polygon_from_kml(kml_filepath)\n",
+    "        roi_polygon = SDS_tools.smallest_rectangle(kml_polygon)\n",
+    "\n",
+    "        site_name = site[:site.find('.')]\n",
+    "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
+    "\n",
+    "        inputs = {'polygon': roi_polygon, 'dates': date_pair, 'sat_name': sat_name,\n",
+    "                  'site_name': site_name, 'median_dir_path': median_dir_path}\n",
+    "\n",
+    "        settings['inputs'] = inputs\n",
+    "        printProgress(f'processing {site_name}: {date_pair}')\n",
+    "        \n",
+    "        NOC_download.retrieve_median_optical(settings)\n",
+    "    \n",
+    "metadata = NOC_download.save_metadata(settings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## find reference threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for site in sites:\n",
     "    \n",
     "    site_name = site[:site.find('.')]\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "\n",
-    "    inputs = {'polygon': roi_polygon, 'dates': dates, 'sat_list': [sat_name],\n",
-    "              'site_name': site_name, 'median_dir_path': median_dir_path,\n",
-    "              'reference_threshold': 0}\n",
-    "\n",
+    "    \n",
+    "    printProgress(f'processing {site_name}')\n",
+    "    \n",
+    "    inputs = {'dates': ['2019-01-01', '2020-12-31'], 'sat_name': sat_name, 'site_name': site_name,\n",
+    "              'median_dir_path': median_dir_path}\n",
+    "    \n",
+    "    inputs['pansharpen'] = True\n",
+    "    inputs['reference_threshold'] = 0\n",
     "    settings['inputs'] = inputs\n",
-    "    printProgress(f'processing {site_name}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "progress  >>>  metadata loaded\n"
-     ]
-    }
-   ],
-   "source": [
-    "    # download median images\n",
-    "    #metadata = NOC_download.retrieve_median_optical(settings)\n",
     "    \n",
-    "    ## load saved metadata\n",
-    "    metadata = NOC_download.get_median_metadata(inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "progress  >>>  reference shoreline loaded\n"
-     ]
-    }
-   ],
-   "source": [
-    "settings['reference_shoreline'] = NOC_preprocess.get_reference_shoreline_median(inputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "progress  >>>  extracting shorelines \n",
-      "progress  >>>  classifying image\n",
-      "progress  >>>  select threshold\n",
-      "@@@ MNDWI min: -0.8216607804125775\n",
-      "@@@ MNDWI max: 0.5962464856008638\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'dates'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-820132a97e71>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m##Batch shoreline detection\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNOC_shoreline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract_shorelines_optical\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msettings\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpansharpen\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC:\\code\\CoastSat-1.1\\coastsat\\NOC_shoreline.py\u001b[0m in \u001b[0;36mextract_shorelines_optical\u001b[1;34m(metadata, settings, pansharpen)\u001b[0m\n\u001b[0;32m    128\u001b[0m         \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    129\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 130\u001b[1;33m     \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mSDS_tools\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge_output\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    131\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    132\u001b[0m     \u001b[1;31m# save outputput structure as output.pkl\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\code\\CoastSat-1.1\\coastsat\\SDS_tools.py\u001b[0m in \u001b[0;36mmerge_output\u001b[1;34m(output)\u001b[0m\n\u001b[0;32m    409\u001b[0m             \u001b[0moutput_all\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moutput_all\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0moutput\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msatname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    410\u001b[0m         output_all['satname'] = output_all['satname'] + [_ for _ in np.tile(satname,\n\u001b[1;32m--> 411\u001b[1;33m                   len(output[satname]['dates']))]\n\u001b[0m\u001b[0;32m    412\u001b[0m     \u001b[1;31m# sort chronologically\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    413\u001b[0m     \u001b[0midx_sorted\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msorted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput_all\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'dates'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0moutput_all\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'dates'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'dates'"
-     ]
-    }
-   ],
-   "source": [
     "    %matplotlib qt\n",
+    "    NOC_shoreline.find_reference_threshold(settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for site in sites:\n",
+    "    for date_pair in dates:\n",
     "    \n",
-    "    ##Batch shoreline detection\n",
-    "    output = NOC_shoreline.extract_shorelines_optical(metadata, settings, pansharpen=False)"
+    "        site_name = site[:site.find('.')]\n",
+    "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
+    "\n",
+    "        printProgress(f'processing {site_name}')\n",
+    "\n",
+    "        inputs = {'dates': date_pair, 'sat_name': sat_name, 'site_name': site_name,\n",
+    "                  'median_dir_path': median_dir_path, 'pansharpen': True}\n",
+    "        settings['inputs'] = inputs\n",
+    "        %matplotlib qt\n",
+    "\n",
+    "        ##Batch shoreline detection\n",
+    "        output = NOC_shoreline.extract_shorelines_optical(metadata, settings)"
    ]
   },
   {
@@ -223,17 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = SDS_tools.remove_duplicates(output) # removes duplicates (images taken on the same date by the same satellite)\n",
-    "output = SDS_tools.remove_inaccurate_georef(output, 10) # remove inaccurate georeferencing (set threshold to 10 m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf = SDS_tools.output_to_gdf(output, 'lines')\n",
+    "gdf = NOC_tools.output_to_gdf(output, 'lines')\n",
     "\n",
     "satname = output['satname'][0]\n",
     "file_string = f'{sitename}_shorelines_{satname}.geojson'\n",
