--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -106,7 +106,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "progress  >>>  processing Weymouth: ['2019-01-01', '2019-06-30']\n",
+      "progress  >>>  connecting to GEE\n",
+      "progress  >>>  found 29 images\n",
+      "progress  >>>  downloading median for bands\n",
+      "progress  >>>  \t\"10m\" bands:\t['B2', 'B3', 'B4', 'B8']\n"
+     ]
+    }
+   ],
    "source": [
     "for site in sites:\n",
     "    for date_pair in dates:\n",
@@ -152,12 +164,19 @@
     "    inputs = {'dates': ['2019-01-01', '2020-12-31'], 'sat_name': sat_name, 'site_name': site_name,\n",
     "              'median_dir_path': median_dir_path}\n",
     "    \n",
-    "    inputs['pansharpen'] = True\n",
+    "    inputs['pansharpen'] = False\n",
     "    inputs['reference_threshold'] = 0\n",
     "    settings['inputs'] = inputs\n",
     "    \n",
     "    %matplotlib qt\n",
     "    NOC_shoreline.find_reference_threshold(settings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## extract shorelines"
    ]
   },
   {
@@ -175,12 +194,16 @@
     "        printProgress(f'processing {site_name}')\n",
     "\n",
     "        inputs = {'dates': date_pair, 'sat_name': sat_name, 'site_name': site_name,\n",
-    "                  'median_dir_path': median_dir_path, 'pansharpen': True}\n",
+    "                  'median_dir_path': median_dir_path}\n",
+    "            \n",
+    "        inputs['pansharpen'] = True\n",
+    "        inputs['reference_threshold'] = -0.16\n",
     "        settings['inputs'] = inputs\n",
+    "        \n",
+    "        metadata = NOC_download.save_metadata(settings)\n",
+    "        \n",
     "        %matplotlib qt\n",
-    "\n",
-    "        ##Batch shoreline detection\n",
-    "        output = NOC_shoreline.extract_shorelines_optical(metadata, settings)"
+    "        output = NOC_shoreline.extract_shoreline_optical(metadata, settings)"
    ]
   },
   {
