reference shoreline issue

--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -37,7 +37,7 @@
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
-    "settings ={'output_epsg': 32326,\n",
+    "settings ={'output_epsg': 32620,\n",
     "           \n",
     "           'cloud_thresh':0.9,\n",
     "           \n",
@@ -106,19 +106,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "progress  >>>  processing Weymouth: ['2019-01-01', '2019-06-30']\n",
-      "progress  >>>  connecting to GEE\n",
-      "progress  >>>  found 29 images\n",
-      "progress  >>>  downloading median for bands\n",
-      "progress  >>>  \t\"10m\" bands:\t['B2', 'B3', 'B4', 'B8']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for site in sites:\n",
     "    for date_pair in dates:\n",
@@ -196,6 +184,7 @@
     "        inputs = {'dates': date_pair, 'sat_name': sat_name, 'site_name': site_name,\n",
     "                  'median_dir_path': median_dir_path}\n",
     "            \n",
+    "        inputs['create_reference_shoreline'] = True \n",
     "        inputs['pansharpen'] = True\n",
     "        inputs['reference_threshold'] = -0.16\n",
     "        settings['inputs'] = inputs\n",
