--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,55 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "progress  >>>  processing Weymouth\n",
+      "progress  >>>  metadata saved\n",
+      "progress  >>>  extracting shoreline \n",
+      "progress  >>>  pansharpening SWIR2\n",
+      "progress  >>>  classifying image\n",
+      "progress  >>>  select threshold\n",
+      "@@@ MNDWI min: -0.9099179547946017\n",
+      "@@@ MNDWI max: 0.36025894639190303\n",
+      "progress  >>>  shoreline extracted\n",
+      "progress  >>>  saving reference shoreline\n",
+      "progress  >>>  shoreline extracted\n",
+      "progress  >>>  processing Weymouth\n",
+      "progress  >>>  metadata saved\n",
+      "progress  >>>  extracting shoreline \n",
+      "progress  >>>  pansharpening SWIR2\n",
+      "progress  >>>  classifying image\n",
+      "progress  >>>  select threshold\n",
+      "@@@ MNDWI min: -0.9099179547946017\n",
+      "@@@ MNDWI max: 0.36025894639190303\n",
+      "progress  >>>  shoreline extracted\n",
+      "progress  >>>  saving reference shoreline\n",
+      "progress  >>>  shoreline extracted\n",
+      "progress  >>>  processing Weymouth\n",
+      "progress  >>>  metadata saved\n",
+      "progress  >>>  extracting shoreline \n",
+      "progress  >>>  pansharpening SWIR2\n",
+      "progress  >>>  classifying image\n",
+      "progress  >>>  select threshold\n",
+      "@@@ MNDWI min: -0.9099179547946017\n",
+      "@@@ MNDWI max: 0.36025894639190303\n",
+      "progress  >>>  shoreline extracted\n",
+      "progress  >>>  saving reference shoreline\n",
+      "progress  >>>  shoreline extracted\n",
+      "progress  >>>  processing Weymouth\n",
+      "progress  >>>  metadata saved\n",
+      "progress  >>>  extracting shoreline \n",
+      "progress  >>>  pansharpening SWIR2\n",
+      "progress  >>>  classifying image\n",
+      "progress  >>>  select threshold\n",
+      "@@@ MNDWI min: -0.9099179547946017\n",
+      "@@@ MNDWI max: 0.36025894639190303\n"
+     ]
+    }
+   ],
    "source": [
     "for site in sites:\n",
     "    for date_pair in dates:\n",
