--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
     "         ['2020-01-01', '2020-06-30'],\n",
     "         ['2020-07-01', '2020-12-31']]\n",
     "\n",
-    "sat_name = 'S2'"
+    "inputs = {'sat_name': 'S2'}"
    ]
   },
   {
@@ -117,11 +117,11 @@
     "\n",
     "        site_name = site[:site.find('.')]\n",
     "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "\n",
-    "        inputs = {'polygon': roi_polygon, 'dates': date_pair, 'sat_name': sat_name,\n",
-    "                  'site_name': site_name, 'median_dir_path': median_dir_path}\n",
-    "\n",
+    "        inputs['site_name'] = site_name\n",
+    "        inputs['dates'] = date_pair \n",
+    "        inputs['median_dir_path'] = median_dir_path\n",
     "        settings['inputs'] = inputs\n",
+    "        \n",
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
     "        NOC_download.retrieve_median_optical(settings)\n",
@@ -138,23 +138,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "progress  >>>  processing Weymouth\n",
+      "progress  >>>  file_names loaded\n",
+      "progress  >>>  displaying reference histogram\n",
+      "@@@ MNDWI min: -0.8505577802711499\n",
+      "@@@ MNDWI max: 0.6108129772317995\n",
+      "progress  >>>  shoreline extracted\n"
+     ]
+    }
+   ],
    "source": [
+    "inputs['pansharpen'] = False\n",
+    "inputs['reference_threshold'] = 0\n",
+    "inputs['dates'] = ['2019-01-01', '2020-12-31']\n",
+    "    \n",
     "for site in sites:\n",
     "    \n",
     "    site_name = site[:site.find('.')]\n",
     "    median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
+    "    inputs['site_name'] = site_name\n",
+    "    inputs['median_dir_path'] = median_dir_path\n",
+    "    settings['inputs'] = inputs\n",
     "    \n",
     "    printProgress(f'processing {site_name}')\n",
-    "    \n",
-    "    inputs = {'dates': ['2019-01-01', '2020-12-31'], 'sat_name': sat_name, 'site_name': site_name,\n",
-    "              'median_dir_path': median_dir_path}\n",
-    "    \n",
-    "    inputs['pansharpen'] = False\n",
-    "    inputs['reference_threshold'] = 0\n",
-    "    settings['inputs'] = inputs\n",
     "    \n",
     "    %matplotlib qt\n",
     "    NOC_shoreline.find_reference_threshold(settings)"
@@ -169,75 +182,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "progress  >>>  processing Weymouth\n",
-      "progress  >>>  metadata saved\n",
-      "progress  >>>  extracting shoreline \n",
-      "progress  >>>  pansharpening SWIR2\n",
-      "progress  >>>  classifying image\n",
-      "progress  >>>  select threshold\n",
-      "@@@ MNDWI min: -0.9099179547946017\n",
-      "@@@ MNDWI max: 0.36025894639190303\n",
-      "progress  >>>  shoreline extracted\n",
-      "progress  >>>  saving reference shoreline\n",
-      "progress  >>>  shoreline extracted\n",
-      "progress  >>>  processing Weymouth\n",
-      "progress  >>>  metadata saved\n",
-      "progress  >>>  extracting shoreline \n",
-      "progress  >>>  pansharpening SWIR2\n",
-      "progress  >>>  classifying image\n",
-      "progress  >>>  select threshold\n",
-      "@@@ MNDWI min: -0.9099179547946017\n",
-      "@@@ MNDWI max: 0.36025894639190303\n",
-      "progress  >>>  shoreline extracted\n",
-      "progress  >>>  saving reference shoreline\n",
-      "progress  >>>  shoreline extracted\n",
-      "progress  >>>  processing Weymouth\n",
-      "progress  >>>  metadata saved\n",
-      "progress  >>>  extracting shoreline \n",
-      "progress  >>>  pansharpening SWIR2\n",
-      "progress  >>>  classifying image\n",
-      "progress  >>>  select threshold\n",
-      "@@@ MNDWI min: -0.9099179547946017\n",
-      "@@@ MNDWI max: 0.36025894639190303\n",
-      "progress  >>>  shoreline extracted\n",
-      "progress  >>>  saving reference shoreline\n",
-      "progress  >>>  shoreline extracted\n",
-      "progress  >>>  processing Weymouth\n",
-      "progress  >>>  metadata saved\n",
-      "progress  >>>  extracting shoreline \n",
-      "progress  >>>  pansharpening SWIR2\n",
-      "progress  >>>  classifying image\n",
-      "progress  >>>  select threshold\n",
-      "@@@ MNDWI min: -0.9099179547946017\n",
-      "@@@ MNDWI max: 0.36025894639190303\n"
+      "progress  >>>  processing Weymouth: ['2019-01-01', '2019-06-30']\n",
+      "progress  >>>  metadata loaded\n",
+      "{'file_names': ['Weymouth_median_S2019-01-01_E2019-06-30_10m.txt', 'Weymouth_median_S2019-01-01_E2019-06-30_20m.txt', 'Weymouth_median_S2019-01-01_E2019-06-30_60m.txt'], 'epsg': 4326, 'date_start': '2019-01-01', 'date_end': '2019-06-30', 'number_images': 29}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'S2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-6b8dd6cf3906>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m         \u001b[0mget_ipython\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'matplotlib'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'qt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m         \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNOC_shoreline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextract_shoreline_optical\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msettings\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\code\\CoastSat-1.1\\coastsat\\NOC_shoreline.py\u001b[0m in \u001b[0;36mextract_shoreline_optical\u001b[1;34m(metadata, settings)\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[0mpixel_size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mband_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mfirst_key\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m     \u001b[0mbase_file_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmetadata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msat_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'file_names'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[0mmodels_file_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetcwd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'classification'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'models'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'S2'"
      ]
     }
    ],
    "source": [
+    "inputs = {'sat_name': sat_name}\n",
+    "\n",
+    "inputs['create_reference_shoreline'] = True \n",
+    "inputs['pansharpen'] = True\n",
+    "inputs['reference_threshold'] = -0.25\n",
+    "        \n",
     "for site in sites:\n",
     "    for date_pair in dates:\n",
-    "    \n",
+    " \n",
     "        site_name = site[:site.find('.')]\n",
     "        median_dir_path = os.path.join(base_dir_path, site_name, 'median')\n",
-    "\n",
-    "        printProgress(f'processing {site_name}')\n",
-    "\n",
-    "        inputs = {'dates': date_pair, 'sat_name': sat_name, 'site_name': site_name,\n",
-    "                  'median_dir_path': median_dir_path}\n",
-    "            \n",
-    "        inputs['create_reference_shoreline'] = True \n",
-    "        inputs['pansharpen'] = True\n",
-    "        inputs['reference_threshold'] = -0.16\n",
+    "        inputs['site_name'] = site_name\n",
+    "        inputs['dates'] = date_pair \n",
+    "        inputs['median_dir_path'] = median_dir_path\n",
     "        settings['inputs'] = inputs\n",
+    "\n",
+    "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
-    "        metadata = NOC_download.save_metadata(settings)\n",
+    "        metadata = NOC_download.load_metadata(settings)\n",
+    "        print(metadata)\n",
     "        \n",
     "        %matplotlib qt\n",
     "        output = NOC_shoreline.extract_shoreline_optical(metadata, settings)"
