--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -200,10 +200,9 @@
     "        printProgress(f'processing {site_name}: {date_pair}')\n",
     "        \n",
     "        metadata = NOC_download.load_metadata(settings)\n",
-    "        print(metadata)\n",
     "        \n",
     "        %matplotlib qt\n",
-    "        output = NOC_shoreline.extract_shoreline_optical(metadata, settings)"
+    "        shoreline = NOC_shoreline.extract_shoreline_optical(metadata, settings)"
    ]
   },
   {
@@ -212,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = NOC_tools.output_to_gdf(output, 'lines')\n",
+    "gdf = NOC_tools.output_to_gdf(shoreline, 'lines')\n",
     "\n",
     "satname = output['satname'][0]\n",
     "file_string = f'{sitename}_shorelines_{satname}.geojson'\n",
