--- a/optical_shoreline.ipynb
+++ b/optical_shoreline.ipynb
@@ -33,7 +33,7 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import matplotlib.pyplot as plt\n",
-    "from utils.print_utils import printProgress, printWarning\n",
+    "from utils.print_utils import printProgress, printSuccess, printWarning\n",
     "from coastsat import NOC_tools, NOC_shoreline, NOC_download, NOC_preprocess, \\\n",
     "    SDS_tools, SDS_shoreline, SDS_download, SDS_preprocess\n",
     "\n",
@@ -202,52 +202,14 @@
     "        metadata = NOC_download.load_metadata(settings)\n",
     "        \n",
     "        %matplotlib qt\n",
-    "        shoreline = NOC_shoreline.extract_shoreline_optical(metadata, settings)"
+    "        shoreline = NOC_shoreline.extract_shoreline_optical(metadata, settings)\n",
+    "        \n",
+    "        gdf = NOC_tools.output_to_gdf(shoreline, metadata)\n",
+    "        file_string = f'{site_name}_shorelines_{inputs[\"sat_name\"]}.geojson'\n",
+    "        gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])}\n",
+    "        gdf.to_file(os.path.join(median_dir_path, file_string),\n",
+    "                    driver='GeoJSON', encoding='utf-8')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf = NOC_tools.output_to_gdf(shoreline, 'lines')\n",
-    "\n",
-    "satname = output['satname'][0]\n",
-    "file_string = f'{sitename}_shorelines_{satname}.geojson'\n",
-    "\n",
-    "gdf.crs = {'init':'epsg:'+str(settings['output_epsg'])} # set layer projection\n",
-    "# save GEOJSON layer to file\n",
-    "gdf.to_file(os.path.join(inputs['filepath'], inputs['sitename'],\n",
-    "                         file_string),\n",
-    "                         driver='GeoJSON', encoding='utf-8')\n",
-    "print('finished ...')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=[15,8])\n",
-    "plt.axis('equal')\n",
-    "plt.xlabel('Eastings')\n",
-    "plt.ylabel('Northings')\n",
-    "plt.grid(linestyle=':', color='0.5')\n",
-    "for i in range(len(output['shorelines'])):\n",
-    "    sl = output['shorelines'][i]\n",
-    "    date = output['dates'][i]\n",
-    "    plt.plot(sl[:,0], sl[:,1], '.', label=date.strftime('%d-%m-%Y'))\n",
-    "plt.legend();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
